Fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vw;
+  height: 100vh;
 }
 
 .App .wrapper {
